[package]
name = "include-graph-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.5"
once_cell = "1.10"
tokio = { version = "1.17", features = ["full"] }
clap = { version = "3.1", default-features = false, features = ["std", "derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-recursion = "1.0"
