[package]
name = "include-graph-rs"
version = "0.1.1"
edition = "2021"

[dependencies]
regex = "1.10"
tokio = { version = "1.39", features = [
    "macros",
    "fs",
    "rt-multi-thread",
    "io-util",
] }
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-recursion = "1.1"
